---------------------------------------------------------------------------------------------------
Version: 0.9.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.9.2
Date: 2024-01-16
  Bugfixes:
    - Fixed bug where trying to load the game without Loader Redux would cause an error
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2024-01-16
  Bugfixes:
    - Made the info.json version actually match the intended version. Whoops
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 2024-01-16
  Features:
    - Added option to reorder item groups
    - Regroups belts/splitters/undergrounds
    - Regroups Miniloaders
    - Regroups Deadlock loaders/beltboxes
    - Regroups AAI loaders
    - Regroups Loader Redux loaders
  Locale:
    - Added description for new setting
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 2024-01-14
  Features:
    - Splitter and Underground items are now recolored
    - Deadlock items are now recolored
    - Miniloader items are now recolored
  Changes:
    - Added some debug files to the package ignore
---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 2024-01-14
  Features:
    - Added Loader Redux support
---------------------------------------------------------------------------------------------------
Version: 0.7.2
Date: 2024-01-12
  Changes:
    - Added a package.ignore to the info.json
---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2024-01-08
  Architecture:
    - Reorganized the tinting code
---------------------------------------------------------------------------------------------------