@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.3
-Date: ????
-  Changes:
+Date: 2024-06-24
+  Major Features:
+    - Added support for vanilla-loaders-hd
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.2
 Date: 2024-01-16
